manifest/unpackaged/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Abonnement__c</fullName>
        <description>This field will contain the recurring charges of the quote multiplied by the number of months</description>
        <inlineHelpText>This field will contain the recurring charges of the quote multiplied by the number of months</inlineHelpText>
        <label>Abonnement</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Renouvellement__c</fullName>
        <formula>if(ispickval(Opportunity.Acquisition_Renouvellement__c, &quot;01&quot;), &quot;Acquisition&quot;, 
if(ispickval(Opportunity.Acquisition_Renouvellement__c, &quot;11&quot;), &quot;Réengagement&quot;,&quot;Rajout de ligne&quot; 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition/Réengagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affecter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is only for Affecter button.</description>
        <label>Affecter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approbation_accepte__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approbation acceptée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalSubmited__c</fullName>
        <label>ApprovalSubmited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Notification__c</fullName>
        <label>Approval Notification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DCPME</fullName>
                </value>
                <value>
                    <fullName>WD&amp;OTEO</fullName>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
                <value>
                    <fullName>CDG</fullName>
                </value>
                <value>
                    <fullName>DGE&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Return_3__c</fullName>
        <label>Approval Return 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DGA</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Return_4__c</fullName>
        <label>Approval Return 4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DGA</fullName>
                </value>
                <value>
                    <fullName>PDG</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Team__c</fullName>
        <label>Approver Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDG</fullName>
                </value>
                <value>
                    <fullName>DGA</fullName>
                </value>
                <value>
                    <fullName>PDG</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign__c</fullName>
        <label>Assigné à</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssigneTime__c</fullName>
        <label>AssigneTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssignedTime__c</fullName>
        <formula>ABS( TimeValue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignedTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autre__c</fullName>
        <label>Autre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bad_Debt__c</fullName>
        <description>This field will contain the risk that client does not pay their bills</description>
        <inlineHelpText>This field will contain the risk that client does not pay their bills</inlineHelpText>
        <label>Bad Debt</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Canal_de_vente__c</fullName>
        <formula>Opportunity.Account.Canal_de_vente__c</formula>
        <label>Canal de vente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capex__c</fullName>
        <label>Capex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_t_terminaux__c</fullName>
        <label>Coût terminaux</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <description>This field contains the commission that sales rep gets</description>
        <inlineHelpText>This field contains the commission that sales rep gets</inlineHelpText>
        <label>Commission</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conversion_Customer__c</fullName>
        <formula>CASE(Status,&quot;Approbation acceptée&quot;, &quot;Accepted&quot;, &quot;Not-Accepted&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUserProfileId__c</fullName>
        <formula>$User.ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUserProfileId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDiffAmount__c</fullName>
        <formula>DATETIMEVALUE( Date_d_envoie_au_client__c) -  DATETIMEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDiffAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_d_envoie_au_client__c</fullName>
        <label>Date d&apos;envoie au client</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EBITDA__c</fullName>
        <description>EBITDA</description>
        <inlineHelpText>EBITDA</inlineHelpText>
        <label>EBITDA</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBITDA_margin__c</fullName>
        <description>EBITDA margin</description>
        <inlineHelpText>EBITDA margin</inlineHelpText>
        <label>EBITDA margin</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EBIT__c</fullName>
        <label>EBIT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBIT_margin__c</fullName>
        <label>EBIT margin</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Etude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Etude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Etude_technique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Etude technique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Etude_technique_termin_e__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Etude technique terminée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAS__c</fullName>
        <description>This field contains the one shot fees that the client pays</description>
        <inlineHelpText>This field contains the one shot fees that the client pays</inlineHelpText>
        <label>FAS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finish_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will update by OSM Team and It Visible only to OSM Team.</description>
        <label>Technical Study Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula_Checkbox__c</fullName>
        <formula>Today()&gt;=ExpirationDate-5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interco_In__c</fullName>
        <description>This field contains the value that INWI gets for incoming calls</description>
        <inlineHelpText>This field contains the value that INWI gets for incoming calls</inlineHelpText>
        <label>Interco In</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interco_Out__c</fullName>
        <description>This field contains the value that INWI gets for outgoing calls</description>
        <inlineHelpText>This field contains the value that INWI gets for outgoing calls</inlineHelpText>
        <label>Interco Out</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsPopup_AssigneStatus__c</fullName>
        <defaultValue>&apos;True&apos;</defaultValue>
        <label>IsPopup_AssigneStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                    <label>True</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Etude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marge_sur_Interco__c</fullName>
        <label>Marge sur Interco</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month_No__c</fullName>
        <formula>MONTH( DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month No</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month of Quote Creation.</description>
        <formula>CASE(MONTH(DateValue(CreatedDate)),
1, &quot;01 January&quot;, 2, &quot; 02 February&quot;, 3, &quot;03 March&quot;,  4, &quot;04 April&quot;,  5, &quot;05 May&quot;,  6, &quot;06 June&quot;, 7, &quot;07 July&quot;, 8, &quot;08 August&quot;, 9, &quot;09 September&quot;, 10, &quot;10 October&quot;, 11, &quot;11 November&quot;, 12, &quot;12 December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month of Quote Creation.</inlineHelpText>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Niveau_de_validation__c</fullName>
        <label>Niveau de validation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Technique__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will decide the flow is ICT Simple or ICT Complex.</description>
        <label>OSM Technique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTAvrgDiscount__c</fullName>
        <label>Remise Moyenne OT</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OVA_calcule__c</fullName>
        <label>OVA calculé</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offre_Catalogue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offre Catalogue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldRecordType__c</fullName>
        <label>OldRecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opex__c</fullName>
        <label>Opex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Back__c</fullName>
        <description>This is the number of months to get the payback</description>
        <inlineHelpText>This is the number of months to get the payback</inlineHelpText>
        <label>Pay Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorRecordType__c</fullName>
        <label>PriorRecordType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLineItemListSize__c</fullName>
        <label>QuoteLineItemListSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Won__c</fullName>
        <label>Quote Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rachat_Contrat__c</fullName>
        <label>Rachat contrat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordOwnerReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RecordOwnerReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_type__c</fullName>
        <formula>Opportunity.Record_type__c</formula>
        <label>Type d&apos;enregistrement de devis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remise_Moyenne__c</fullName>
        <description>This field contains the average discount</description>
        <inlineHelpText>This field contains the average discount</inlineHelpText>
        <label>Remise Moyenne</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Return_4_Step_Approval_Team__c</fullName>
        <label>Return 4 Step Approval Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Controle de Gestion</fullName>
                </value>
                <value>
                    <fullName>Directeur Commerciale</fullName>
                </value>
                <value>
                    <fullName>Directeur General E&amp;D</fullName>
                </value>
                <value>
                    <fullName>Record_Owner</fullName>
                    <label>Record Owner</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>This field contains what INWI gets from the client during the whole priod of the contract</description>
        <inlineHelpText>This field contains what INWI gets from the client during the whole priod of the contract</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>$UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment1__c</fullName>
        <formula>Opportunity.Account.Segment1__c</formula>
        <label>Segment Marché</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment2__c</fullName>
        <formula>Opportunity.Account.Segment2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sous segment 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sous_segment2__c</fullName>
        <formula>Opportunity.Account.Sous_segment2__c</formula>
        <label>Sous-segment2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_project__c</fullName>
        <formula>Opportunity.Projet_sp_cial__c</formula>
        <label>Projet spécial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Projet Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subvention__c</fullName>
        <label>Subvention</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T1__c</fullName>
        <formula>TIMEVALUE(NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T1</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>T2__c</fullName>
        <formula>TIMEVALUE( AssigneTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T2</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Taux_de_subvention__c</fullName>
        <description>This field contains the subvention rate</description>
        <inlineHelpText>This field contains the subvention rate</inlineHelpText>
        <label>Taux de subvention</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Technical_study_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Etude technique terminée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestQuoteNumber__c</fullName>
        <label>TestQuoteNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestStatus__c</fullName>
        <label>TestStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeValue__c</fullName>
        <formula>SECOND(( TIMEVALUE(T1__c))) - SECOND((TIMEVALUE(T2__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToDelete__c</fullName>
        <label>ToDelete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Plus_Expiry__c</fullName>
        <formula>Today()&gt;= ExpirationDate-5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Plus Expiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendeur__c</fullName>
        <formula>Opportunity.Owner.FirstName +&quot; &quot;+  Opportunity.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendeur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Text(YEAR(DateValue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>raccordement_study_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Etude raccordement terminée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Opportunity.vlocity_cmt__AccountRecordType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>Opportunity.vlocity_cmt__AccountSLA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultBillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Account Quotes</relationshipLabel>
        <relationshipName>BillingAccountQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultCurrencyPaymentMode__c</fullName>
        <label>Default Currency Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Account Quotes</relationshipLabel>
        <relationshipName>ServiceAccountQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Service Point associated with this quote</description>
        <label>Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Service Point Quotes</relationshipLabel>
        <relationshipName>ServicePointQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DeliveryInstallationStatus__c</fullName>
        <label>Delivery Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: One Time Loyalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveQuoteTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c +  Tax + ( vlocity_cmt__EffectiveRecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Effective Total: Recurring Costs</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsageCostTotal__c</fullName>
        <description>Effective Usage Cost Total</description>
        <label>Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUsagePriceTotal__c</fullName>
        <description>Effective Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this quote</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if quote requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPriced__c</fullName>
        <formula>NOT(ISNULL(vlocity_cmt__LastPricedAt__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Priced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsValidated__c</fullName>
        <formula>NOT(ISNULL(vlocity_cmt__ValidationDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastPricedAt__c</fullName>
        <label>Last Priced At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadSource__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased List</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number Of Contracted Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeLoyaltyTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One Time Loyalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeMarginTotal__c</fullName>
        <label>One Time Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of one time totals of quotes for which this quote is a parent quote.</description>
        <label>Parent Quote One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityAccountId__c</fullName>
        <description>Formula: Opportunity&apos;s account identifier casted as a text value.</description>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentQuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates if this has parent quote. Parent quote here also refers to a master quote.</description>
        <label>Parent Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PoDate__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PoNumber__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Quotes Using This Price List</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Group to which the service point associated with this quote is linked</description>
        <label>Quote Group</label>
        <referenceTo>vlocity_cmt__QuoteGroup__c</referenceTo>
        <relationshipLabel>Group Quotes</relationshipLabel>
        <relationshipName>GroupQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteMarginTotal__c</fullName>
        <label>Quote Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c +  Tax + ( vlocity_cmt__RecurringTotal__c *  vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringMarginTotal__c</fullName>
        <label>Recurring Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>